# project2

./: .gitignore  CMakeLists.txt  README.md  problem2.cpp  problem3.cpp  problem5.cpp  problem6.cpp  project1.cpp  timing.cpp
include/: useful.hpp
src/: useful.cpp
test/: jacobi.cpp  tridiag_mat.cpp
